# docker_base

./: .gitignore  .markdownlint.yaml  .zsh_history_local  README.md  justfile  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
src/docker_base/: __init__.py  hello.py
