[project]
name = "docker-base"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ruff>=0.15.11",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docker_base"]

[tool.rye.scripts]
hello = "python -m docker_base.hello"
